Finaly visual working..

--- a/MvcApplication1/MvcApplication1/Views/Home/Index.cshtml
+++ b/MvcApplication1/MvcApplication1/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 @section featured {
     <section class="">
         <div class="">
-            <h1>bar magnezi and senia kalma</h1>
+            <h1>Bar Bagnezi and Senia Kalma</h1>
         </div>
     </section>
 }
