--- a/MvcApplication1/MvcApplication1/Views/Manager/Comments.cshtml
+++ b/MvcApplication1/MvcApplication1/Views/Manager/Comments.cshtml
@@ -14,17 +14,23 @@
         <td>body</td>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
+@if(Model.ToArray().Length==0){
     <tr>
-        <td>@item.id</td>
-        <td>@item.author</td>
-        <td>@item.title</td>
-        <td>@item.body</td>
-        <td> 
-            @Html.ActionLink("Delete", "DeleteComment", new {CommentId=item.id, PostId=item.postId  })
-        </td>
+        No comments!!!!!!!
     </tr>
+}else{
+    @foreach (var item in Model) {
+        <tr>
+            <td>@item.id</td>
+            <td>@item.author</td>
+            <td>@item.title</td>
+            <td>@item.body</td>
+            <td>
+                @Html.ActionLink("Delete", "DeleteComment", new {CommentId=item.id, PostId=item.postId  })
+            </td>
+        </tr>
+    }
 }
+
 
 </table>
