--- a/MvcApplication1/MvcApplication1/Views/Shared/_Layout.cshtml
+++ b/MvcApplication1/MvcApplication1/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
             <!-- Navigation -->
             <ul>
                 <li class="selected"><a href="#">Home</a>
-                <li ><a href="blog">Blog</a></li>
-                <li><a href="Manager">Manager</a></li>
+                <li ><a href="/blog/">Blog</a></li>
+                <li><a href="/Manager/">Manager</a></li>
                 <li><a href="#">Fan Club</a></li>
                 <li class="subscribe">
                     <div id="transDemo2" style="float:left">
