--- a/MvcApplication1/MvcApplication1/Views/Blog/Index.cshtml
+++ b/MvcApplication1/MvcApplication1/Views/Blog/Index.cshtml
@@ -50,7 +50,7 @@
 
 			</section>
     }
-    <form action="Blog/addComment" style="padding-left:25px;padding-top:10px" id=" comments">
+    <form action="/Blog/addComment" style="padding-left:25px;padding-top:10px" id=" comments">
         <h3>Add comment:</h3><br>
         author: <input type="text" name="author"><br>
         urlAuthor: <input type="text" name="urlAuthor"><br>
